	  not supported anymore. (Ed Catmur) (#15353)
	* Removed command line argument --multiple in *nix in favor of using
	  GApplication's uniqueness checking directly. The new way to allow
	  multiple Pidgin instances is to pass --gapplication-app-id with an
	  alternate, valid app id. Be careful not to use the same configuration
	  directory as the primary instance.

	Finch:
	* Support the conversation-extended signal for extending the
	  conversation menu. (Howard Chu) (#14818)

	AIM and ICQ:
	* Make buddy list management code more efficient. (Oliver) (#4816)

	Bonjour:
	* Support file transfers up to ~9 EiB.

	Gadu-Gadu:
	* Possibility to require encryption. Also, using encryption when
	  available is default option now. (Tomasz Wasilczyk)
	* Show local time for incoming messages. (Tomasz Wasilczyk) (#4579)
	* Fixed password change dialog and problems with connecting to accounts
	  with non-ASCII passwords. (Tomasz Wasilczyk) (#14652)
	* Option to show links from strangers. (Tomasz Wasilczyk) (#10591)
	* Better handling of "invisible" and "chatty" statuses. (Tomasz
	  Wasilczyk) (#13836)

	Facebook:
	* Added a new prpl for the Facebook Messenger protocol
	* Removed the defunct Facebook XMPP support

	MSN:
	* Fix file transfer with older Mac MSN clients.
	* Support file transfers up to ~9 EiB.
	* Fix buddies not going offline.

	MXit:
	* Remove all reference to Hidden Number.
	* Fix decoding of font-size changes in the markup of received messages.
	* Ignore new invites to join a GroupChat if you're already joined, or
	  still have a pending invite.
	* The buddy's name was not centered vertically in the buddy-list if they
	  did not have a status-message or mood set.

	MySpace:
	* Remove this protocol because the servers have been taken offline.
	  (Robbie Vehse) (#15356)

	XMPP:
	* Strip element prefixes from XHTML-IM messages as they're presented
	  to the core (and UIs) as incoming messages (Thijs Alkemade).
	  (#14529)
	* Support file transfers up to ~9 EiB.